<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

<group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home1"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />
    <item

        android:id="@+id/nav_Subjects1"
        android:icon="@drawable/subjects"
        android:title="Subjects" />
    <item
        android:id="@+id/nav_slideshow1"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_slideshow" />
    <item
        android:id="@+id/nav_tools1"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_tools" />
</group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share1"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send1"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>